# ollama-document-parser

./: .env  README.md  pyproject.toml  test_commands.sh
ollamaparser/: __init__.py  cli.py  composer.py  detection_filter.py  detectors.py  layout_order.py  layout_types.py  markdown_writer.py  metadata.py  ocr_vlm.py  pdf_render.py  quality_check.py  text_clean.py  types.py
ollamaparser/providers/: __init__.py  base.py
ollamaparser/providers/ollama/: __init__.py  client.py  ocr.py  vlm.py
scripts/: parse_pdf.py
test_output/: out.md  out.meta.json
test_output_full/: out.md  out.meta.json
